# AdvToC

./: README
hw2/: CMakeCache.txt  CMakeCache_encoded.txt  CMakeLists.txt  Makefile  README  Tries.cpp  Tries.h  TriesNode.cpp  TriesNode.h  cmake_install.cmake  dTries.cpp  dTries.h  dTriesNode.cpp  dTriesNode.h  decoding  decoding.cpp  encoding  encoding.cpp  infile_encoded.txt  kernel_log.txt  kernel_log_encoded.txt  time_check
